# openai-user-request-connector

./: .env  .env.example  .flake8  .gitignore  Dockerfile  README.md  commands.json  pyproject.toml  requirements.txt  setup.py  startup.sh
src/api/: main.py
src/config/: settings.py
src/models/: models.py
src/services/: openai_service.py
src/tests/: test_api.py  test_openai_service.py
src/utils/: logger.py
